--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -4,7 +4,7 @@ html, body {
     padding: 0;
     flex-direction: column;
     align-items: stretch;
-    font-size: 15vw;
+    font-size: 30pt;
 }
 
 html {
@@ -13,6 +13,15 @@ html {
 
 body {
     flex: 1;
+}
+
+button {
+    font-size: 0.5rem;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+.icon.fa {
+    font-size: 0.75rem;
 }
 
 #react {
@@ -29,14 +38,14 @@ body {
 }
 
 .amount-input {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    font-size: 1rem;
+    text-align: center;
+    padding: 0.5rem;
+    border: 1px solid black;
+}
 
-    &__input {
-        font-size: 1rem;
-        text-align: center;
-    }
+.comment {
+    font-size: 0.5rem;
 }
 
 .keyboard {
@@ -56,5 +65,23 @@ body {
         border: 1px solid black;
         justify-content: center;
         align-items: center;
+    }
+}
+
+.category-picker {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    > button {
+
+    }
+}
+
+.date-time-picker {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    > button {
+
     }
 }
