--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -1,3 +1,7 @@
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 html, body {
     display: flex;
     margin: 0;
@@ -17,7 +21,6 @@ body {
 
 button {
     font-size: 0.5rem;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .icon.fa {
@@ -53,6 +56,11 @@ button {
     flex-direction: column;
     flex: 1;
     justify-content: space-around;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* IE/Edge */
 
     &__row {
         display: flex;
