--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -24,7 +24,7 @@ button {
 }
 
 .icon.fa {
-    font-size: 0.75rem;
+    font-size: 1rem;
 }
 
 #react {
@@ -87,7 +87,7 @@ button {
 
 .header {
     display: flex;
-    font-size: 0.75rem;
+    font-size: 1rem;
 }
 
 
@@ -144,7 +144,7 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
     height: 100%;
     background: $modalBgColor;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: stretch;
     flex-direction: column;
     z-index: 9999;
@@ -153,11 +153,16 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
         display: flex;
         justify-content: center;
         flex-direction: column;
+        flex: 1;
 
         &__cell {
             background: white;
             border-radius: 4px;
-            padding: 0.5rem
+            padding: 0.5rem;
+            display: flex;
+            flex: 1;
+            justify-content: space-between;
+            align-items: stretch;
         }
     }
 
@@ -184,13 +189,20 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
         display: flex;
         flex-direction: column;
         align-items: stretch;
+        justify-content: space-between;
+        flex: 1;
 
         &__section {
             border-bottom: 1px dashed #D6D6D6;
-            padding: 1rem;
+            padding: 0rem;
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: stretch;
+        }
+
+        &__section:nth-child(2) {
+            flex: 1;
         }
 
         &__section:last-child {
@@ -212,7 +224,8 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 .date-picker {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
+    flex:1;
 
     &__months {
         &__title {
@@ -223,6 +236,7 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 
     &__calendar {
         margin: 0.75rem 0;
+        width: 100%;
 
         &__header {
             font-weight: bold;
@@ -230,7 +244,6 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 
         &__cell {
             text-align: center;
-            padding: 0.2rem 0.3rem;
             cursor: default;
             font-size: 0.75rem;
 
@@ -248,12 +261,17 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 .time-picker {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    flex: 1;
 
     &__input {
         font-size: 2rem;
-        width: 40px;
+        width: 2.5rem;
         text-align: center;
         border: none;
+        margin: 0;
+        padding: 0;
     }
 
 }
@@ -264,10 +282,9 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    justify-content: space-between;
 
     margin: 0.2rem;
-
-
 
     &__middle {
         border-left: 1px solid $inputBorderColor;
@@ -275,6 +292,7 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
         display: flex;
         justify-content: center;
         flex-direction: row;
+        flex: 1;
     }
 
 
@@ -283,6 +301,9 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
         justify-content: center;
         margin: 0;
         outline: none;
+        flex-basis: 1rem;
+        align-items: center;
+        text-align: center;
 
         &--up {
             border-radius: 5px 5px 0 0;
@@ -290,6 +311,11 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 
         &--down {
             border-radius: 0 0 5px 5px;
+        }
+
+        /* fix align in safari */
+        > * {
+            margin: 0 auto;
         }
     }
 }
@@ -300,7 +326,6 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
     display: flex;
     flex-direction: row;
     align-items: stretch;
-
     margin: 0.2rem;
 
 
@@ -310,6 +335,8 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
         display: flex;
         justify-content: center;
         flex-direction: column;
+        flex: 1;
+        align-items: center;
     }
 
 
@@ -318,6 +345,9 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
         justify-content: center;
         margin: 0;
         outline: none;
+        flex-basis: 1rem;
+        align-items: center;
+        text-align: center;
 
         &--up {
             border-radius: 0 5px 5px 0;
@@ -329,6 +359,11 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 
         &--up, &--down {
             padding: 6px 10px;
+        }
+
+        /* fix align in safari */
+        > * {
+            margin: 0 auto;
         }
     }
 }
