--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -236,7 +236,44 @@ $modalBgColor: rgba(0, 0, 0, 0.72);
 
     &__calendar {
         margin: 0.75rem 0;
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+
+        > thead {
+            display: flex;
+            flex-direction: column;
+            > tr {
+                display: flex;
+                justify-content: space-around;
+                flex: 1;
+                > td {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex: 1;
+                }
+            }
+        }
+
+        > tbody {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            flex: 1;
+            > tr {
+                display: flex;
+                justify-content: space-around;
+                flex: 1;
+                > td {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex: 1;
+                }
+            }
+        }
+
 
         &__header {
             font-weight: bold;
