--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -66,6 +66,7 @@ button {
     flex-direction: column;
     align-items: stretch;
     flex: 1;
+    padding: 0.1rem;
 }
 
 .input-with-keyboard {
@@ -130,16 +131,27 @@ button {
 }
 
 .header {
-    display: flex;
-    font-size: 0.75rem;
-    align-items: center;
-    justify-content: space-between;
-    background: #000000;
-    padding: 0.1rem 0.25rem;
+    &__placeholder {
+        height: 1.1rem;
+    }
+
+    &__body {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1.2rem;
+        display: flex;
+        font-size: 0.75rem;
+        align-items: center;
+        justify-content: space-between;
+        background: #000000;
+    }
 
     &__hamburger {
         display: flex;
         padding-right: 0.25rem;
+        padding-left: 0.25rem;
     }
 
     &__separator {
@@ -149,6 +161,10 @@ button {
 
     &__queue-status {
         cursor: pointer;
+    }
+
+    &__net-status {
+        padding-right: 0.25rem;
     }
 
     &__net-status, &__queue-status, &__hamburger {
