--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -110,6 +110,10 @@ button {
         border: 1px solid #F3F3F3;
         justify-content: center;
         align-items: center;
+
+        .icon {
+            font-size: 0.75rem
+        }
     }
 
     &__key:active {
