--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -135,8 +135,10 @@ button {
 }
 
 .header {
+    $this: #{&};
+
     &__placeholder {
-        height: 1.1rem;
+        height: 0.75rem;
     }
 
     &__body {
@@ -144,9 +146,9 @@ button {
         top: 0;
         left: 0;
         width: 100%;
-        height: 1.2rem;
+        height: 0.85rem;
         display: flex;
-        font-size: 0.75rem;
+        font-size: 0.5rem;
         align-items: center;
         justify-content: space-between;
         background: #000000;
@@ -165,6 +167,7 @@ button {
 
     &__queue-status {
         cursor: pointer;
+        padding-left: 0.25rem;
     }
 
     &__net-status {
@@ -174,6 +177,12 @@ button {
     &__net-status, &__queue-status, &__hamburger {
         color: white;
     }
+
+    @at-root &--offline {
+        #{$this}__body {
+            background: #710000
+        }
+    }
 }
 
 .queue {
@@ -181,14 +190,35 @@ button {
     flex-direction: column;
     flex: 1;
     align-items: stretch;
+    font-size: 0.75rem;
 
     &__task {
         display: flex;
+        align-items: stretch;
+        border-bottom: 1px solid $inputBorderColor;
     }
 
     &__msg {
         display: flex;
         flex: 1;
+        padding: 0.25rem;
+    }
+
+    &__btn {
+        -webkit-appearance: none;
+        color: red;
+        border: none;
+    }
+
+    &__btn:active {
+        -webkit-appearance: none;
+    }
+
+    &__empty-msg {
+        text-align: center;
+        font-style: italic;
+        color: $inputDisabledColor;
+        padding: 0.5rem;
     }
 }
 
